# django-urr

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
django_urr/: __init__.py  extract.py
django_urr/management/commands/: urr_list.py
urrtests/: settings.py  test_command.py  test_extract.py  urls.py  views.py  wsgi.py
